--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                     סדרת דגם: ${series}<br>
                     גימור: ${finish}<br>
                     קוד מדינה: ${country}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${config}">` : ''}
+                    ${image ? `<div class="image-asterisk">* התמונה הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="${config}">` : ''}
                 </div>`;
     }
 
@@ -947,7 +947,7 @@
                     עיצוב: ${design}<br>
                     צבע: ${color}<br>
                     קוד מדינה: ${country}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${tech}">` : ''}
+                    ${image ? `<div class="image-asterisk">*תמונה זו הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="${tech}">` : ''}
                 </div>`;
     }
 
@@ -1068,7 +1068,7 @@ function getTVDetails(model) {
                     מקלט שידור: ${broadcast}<br>
                     מערכת הפעלה: ${os}<br>
                     קוד מדינה: ${country}${countryNote}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${display}">` : ''}
+                    ${image ? `<div class="image-asterisk">*תמונה זו הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="${display}">` : ''}
                     ${featuresHtml}
                 </div>`;
     } catch (e) {
@@ -1100,7 +1100,7 @@ function getTVDetails(model) {
                     סדרת דגם: ${series}<br>
                     צבע: ${color}<br>
                     קוד מדינה: ${country}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${type}">` : ''}
+                    ${image ? `<div class="image-asterisk">*תמונה זו הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="${type}">` : ''}
                 </div>`;
     }
 
@@ -1128,7 +1128,7 @@ function getTVDetails(model) {
                     סדרת דגם: ${series}<br>
                     צבע: ${color}<br>
                     קוד מדינה: ${country}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="${type}">` : ''}
+                    ${image ? `<div class="image-asterisk">*תמונה זו הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="${type}">` : ''}
                 </div>`;
     }
 
@@ -1156,7 +1156,7 @@ function getTVDetails(model) {
                     עיצוב: ${design}<br>
                     צבע: ${color}<br>
                     קוד מדינה: ${country}<br>
-                    ${image ? `<div class="image-asterisk">* תמונה זו היא של סוג המוצר ולא של הדגם הספציפי</div><img src="${image}" alt="מדיח כלים">` : ''}
+                    ${image ? `<div class="image-asterisk">* תמונה זו הינה להמחשה בלבד ויכולה להשתנות מדגם לדגם</div><img src="${image}" alt="מדיח כלים">` : ''}
                 </div>`;
     }
 
