Add second serial number exception

--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@ const serialExceptions = {
         productionDate: 'ינואר 2025',
         warrantyStatus: 'באחריות סמליין'
     }
+    '6GR614BY100002H': {
+        productionDate: 'ינואר 2025',
+        warrantyStatus: 'באחריות סמליין'
+    }
 };
 
         function lookupSerial() {
